Clean up jtreg tags